--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "url": "git://github.com/peterbraden/ical.js.git"
   },
   "dependencies": {
-    "request": "^2.81.0",
     "rrule": "2.1.0"
   },
   "devDependencies": {
@@ -24,6 +23,6 @@
     "underscore": "1.3.0"
   },
   "scripts": {
-    "test": "./node_modules/vows/bin/vows ./test/test.js"
+    "test": "./node_modules/vows/bin/vows test/test.js"
   }
 }
